Fixed margin spacing for edit page. Quick fix for guide hover

--- a/app/pages/OrganizationEditPage.scss
+++ b/app/pages/OrganizationEditPage.scss
@@ -53,6 +53,9 @@
 // EDIT SECTION FORMS
 
 .edit--section {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: calc-em(60px);
   background: #fff;
   border-radius: 8px;
@@ -60,6 +63,7 @@
   box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.2);
   @media screen and (max-width: 900px ) {
     padding: 20px;
+    width: 95%;
   }
 }
 
@@ -82,7 +86,7 @@
   padding: 0;
 
   &--item {
-    margin: 0 calc-em(30px) calc-em(20px) 0;
+    margin: 0 calc-em(20px) calc-em(40px);
     @media screen and (max-width: 900px ) {
       margin: 0 0 20px;
     }
